--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@
 .Nav-Bar {
   margin-bottom: 15px;
   height: 100px;
-  background-color: #dce4f5;
+  background-color: #bbe4e9;
 }
 .Logo {
   width: 200px; /* Adjust the width as needed */
