--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,9 +54,9 @@ img.large {
   margin-left: 10px;
 }
 
-.mb-3 {
+/* .mb-3 {
   max-width: 450px;
-}
+} */
 .custom-border {
   border: 0.3px solid gray !important;
 }
@@ -74,4 +74,25 @@ img.large {
 .checkout-steps > div.active {
   border-bottom: 0.2rem solid #f08000;
   color: #f08000;
+}
+.container.small-container.shipping {
+  margin-top: 50px;
+}
+.shipping-input {
+  border: 0.3px solid gray !important;
+}
+.container.small-container.payment {
+  margin-top: 50px;
+}
+.mb-3.preview {
+  border: 1px solid gray !important;
+}
+.preview {
+  border: 1px solid gray !important;
+}
+.cart-border {
+  border-color: gray !important;
+}
+.signup-border {
+  border: 1px solid gray !important;
 }
