--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -96,3 +96,9 @@ img.large {
 .signup-border {
   border: 1px solid gray !important;
 }
+.Product-Card {
+  margin: 10px;
+}
+.Product-Col {
+  margin-bottom: 2rem;
+}
