Add order history page. Fix bug on account creation to reflect the name on the account. Fix paid status to reflect once the test pay is click.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,3 +102,7 @@ img.large {
 .Product-Col {
   margin-bottom: 2rem;
 }
+/* .dropdown-menu [data-bs-popper] {
+  left: auto;
+  right: 200px;
+} */
