--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,9 @@
 .Nav-Bar {
   margin-bottom: 15px;
   height: 100px;
-  background-color: #bbe4e9;
+  z-index: 1;
+  position: fixed !important;
+  width: 100%;
 }
 .nav-link {
   margin-left: 15px;
@@ -96,13 +98,152 @@ img.large {
 .signup-border {
   border: 1px solid gray !important;
 }
+
+/* Product Card Component */
 .Product-Card {
   margin: 10px;
+  transform: translateY(120px);
 }
+.product-map-container {
+  margin-bottom: 500px;
+}
+/* Product Page */
+.product-page {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Signin page */
+.signin-page-container {
+  margin-top: 180px;
+  margin-bottom: 200px;
+}
+/* Cart Page */
+.cart-page {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Signup page */
+.signup-page-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Shipping Addres */
+.shipping-address-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Payment Method */
+.payment-method-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Place Order */
+.place-order-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+/* Order History */
+.order-history-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+.order-page-container {
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+
 .Product-Col {
   margin-bottom: 2rem;
 }
-/* .dropdown-menu [data-bs-popper] {
-  left: auto;
-  right: 200px;
-} */
+.dropdown-menu {
+  left: auto !important;
+  right: 10px !important;
+}
+
+/* Cover Page */
+/* Search Bar */
+.Search-Input {
+  max-width: 500px;
+  margin-left: 150px;
+}
+.fas.fa-search {
+  color: black;
+}
+#button-search {
+  border-color: black;
+}
+.cover-page {
+  background: url('bg1.png') no-repeat right center;
+  background-size: 80% auto;
+  width: 90vw;
+  height: 80vh;
+  margin-right: 150px;
+}
+
+.splash {
+  filter: brightness(0) saturate(100%) invert(84%) sepia(98%) saturate(1171%)
+    hue-rotate(323deg) brightness(101%) contrast(95%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  margin-left: 355px;
+  margin-top: -200px;
+}
+.bg-color {
+  min-height: 100vh; /* This will cover the full height of the viewport */
+  width: 100vw; /* This will cover the full width of the viewport */
+  margin: 100px 0 0 -20px; /* This ensures there is no margin around the container */
+  padding: 0; /* This ensures there is no padding inside the container */
+  position: absolute; /* This positions the container relative to the viewport */
+  top: 0; /* This aligns the container to the top of the viewport */
+  left: 0; /* This aligns the container to the left of the viewport */
+}
+.cover-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.container.border.rounded {
+  max-width: 700px;
+  height: 400px;
+  margin-left: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  outline: none;
+  /* font-family: 'Arial', sans-serif; */
+  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+}
+.shop {
+  height: 50px;
+  width: 120px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  margin: auto;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border: none;
+  outline: none;
+}
+.bi.bi-arrow-right {
+  margin-left: 10px;
+}
+.shop-link {
+  text-decoration: none;
+  color: black;
+}
+/* Footer */
+.footer {
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #f5f5f5;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+}
