--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,9 +59,7 @@ img.large {
 /* .mb-3 {
   max-width: 450px;
 } */
-.custom-border {
-  border: 0.3px solid gray !important;
-}
+
 .small-container {
   border: 1px solid gray;
   padding: 20px;
@@ -92,12 +90,6 @@ img.large {
 .preview {
   border: 1px solid gray !important;
 }
-.cart-border {
-  border-color: gray !important;
-}
-.signup-border {
-  border: 1px solid gray !important;
-}
 
 /* Product Card Component */
 .Product-Card {
@@ -117,15 +109,31 @@ img.large {
   margin-top: 180px;
   margin-bottom: 200px;
 }
+.custom-border {
+  border: 0.3px solid gray !important;
+}
 /* Cart Page */
 .cart-page {
   margin-top: 150px;
   margin-bottom: 200px;
 }
+.cart-border {
+  border-color: gray !important;
+}
 /* Signup page */
 .signup-page-container {
   margin-top: 150px;
   margin-bottom: 200px;
+}
+.signup-border {
+  border: 1px solid gray !important;
+}
+.small-container {
+  box-shadow: 0 16px 32px rgba(0, 0, 0, 0.4);
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
 }
 /* Shipping Addres */
 .shipping-address-container {
@@ -175,9 +183,9 @@ img.large {
 .cover-page {
   background: url('bg1.png') no-repeat right center;
   background-size: 80% auto;
-  width: 90vw;
-  height: 80vh;
-  margin-right: 150px;
+  width: 100vw;
+  height: 100vh;
+  padding-right: 170px;
 }
 
 .splash {
@@ -187,7 +195,7 @@ img.large {
   top: 0;
   left: 0;
   z-index: -1;
-  margin-left: 355px;
+  padding-left: 300px;
   margin-top: -200px;
 }
 .bg-color {
@@ -204,6 +212,9 @@ img.large {
   justify-content: center;
   align-items: center;
   text-align: center;
+  /* padding-top: 80px; */
+  margin-bottom: 300px;
+  margin-top: 60px;
 }
 .container.border.rounded {
   max-width: 700px;
@@ -211,7 +222,6 @@ img.large {
   margin-left: 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   outline: none;
-  /* font-family: 'Arial', sans-serif; */
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
 .shop {
@@ -237,13 +247,33 @@ img.large {
 }
 /* Footer */
 .footer {
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  background-color: #f5f5f5;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
+  background-color: #dfe9ce;
+}
+.pt-3 {
+  color: black;
+  padding-left: 80px !important;
+  padding-bottom: 20px;
+}
+/* loading */
+.loading-design {
+  display: flex; /* Make container a flex container */
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
+
+  margin-top: 400px;
+  margin-bottom: 400px;
+  position: relative;
+}
+.logo-loading {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+}
+/* footer page */
+.follow-icons {
+  border: none !important;
+  background-color: transparent !important;
+}
+.follow-icons:active {
+  color: black !important;
 }
